# bazeljs_example

./: .babelrc.json  .gitignore  BUILD.bazel  WORKSPACE.bazel  package-lock.json  package.json  webpack.config.js
.fasterci/: config.yaml
app/: BUILD.bazel  index.html  index.js
app/components/: App.js  BUILD.bazel
app/styles/: BUILD.bazel  global.scss
server/: BUILD.bazel  index.js
server/utils/: BUILD.bazel  index.js
test/: BUILD  index.test.js
