load("@npm//http-server:index.bzl", "http_server")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

webpack(
    name = "bundle",
    outs = ["bundle.js"],
    args = [
        "$(execpath index.js)",
        "--config",
        "$(execpath //:webpack.config.js)",
        "-o",
        "$@",
    ],
    data = [
        "index.js",
        "//app/components",
        "//app/styles",
        "//:webpack.config.js",
        "@npm//:node_modules",
        "@npm//react-dom"
    ],
    visibility = ["//visibility:public"],
)

pkg_web(
    name = "app_pkg",
    srcs = [
        "bundle.js",
        "index.html",
    ],
    visibility = ["//visibility:public"],
)

http_server(
    name = "app_server",
    data = [
        ":app_pkg",
    ],
    templated_args = ["."],
)