load("@npm//@babel/cli:index.bzl", "babel")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

filegroup(
    name = "server_srcs",
    srcs = glob(["*.js"]),
)

babel(
    name = "server_babel",
    data = [
        ":server_srcs",
        "//server/utils",
        "@npm//@babel/preset-env",
        "@npm//@babel/preset-flow",
        "@npm//@babel/preset-react",
    ],
    output_dir = True,
    args = [
        "server",
        "--presets",
        "@babel/preset-flow",
        "--presets",
        "@babel/preset-env",
        "--out-dir",
        "$(@D)",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":server_babel",
        "//server/utils",
        "//:webpack.config.js",
        "//:package.json",
        "//app:app_pkg",
        "@npm//module-alias",
        "@npm//compression",
        "@npm//express",
        "@npm//express-graphql",
        "@npm//graphql",
        "@npm//webpack",
    ],
    entry_point = ":server_babel",
    args = ["$(location //app:app_pkg)"]
)

nodejs_binary(
    name = "server_image",
    data = [
        ":server_babel",
        "//:webpack.config.js",
        "//:package.json",
        "//app:app_pkg",
        "@npm//module-alias",
        "@npm//compression",
        "@npm//express",
        "@npm//express-graphql",
        "@npm//graphql",
        "@npm//webpack",
    ],
    entry_point = ":server_babel",
    args = ["$(location //app:app_pkg)"]
)